# archivener

./: README.org  graph_manifest.py  ocr_manifest.py  pyproject.toml
doc/: manifest.jsonld  manifest.ttl  sampleannot.ttl
src/: cli.py  main.py
src/archivener/: __init__.py  fns.py  graphs.py  named_entities.py  ner.py  ner_graph.py  resources.py
src/ocrannotator/: __init__.py
tests/: test_graphs.py  test_ner.py  test_resources.py
